# githubstats

./: .gitignore  README.md  ROADMAP.md  WALKTHROUGH_SUMMARY.md  pyproject.toml
.github/workflows/: ci.yml
src/githubstats/: cli.py  github.py
tests/: test_cli.py  test_github.py
